k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      volumes:
        - name: auth-mongo-pvc
          persistentVolumeClaim:
            claimName: auth-mongo-pvc
      containers:
        - name: auth-mongo
          imagePullPolicy: Always
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: auth-mongo-pvc
