k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: mh10445/new-k8s-client:latest
          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          ports:
            - containerPort: 3000
