k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: mh10445/new-k8s-orders:latest
          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: /
              port: 4000
          ports:
            - containerPort: 4000
