k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      volumes:
        - name: orders-mongo-pvc
          persistentVolumeClaim:
            claimName: orders-mongo-pvc
      containers:
        - name: orders-mongo
          imagePullPolicy: Always
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: orders-mongo-pvc
