k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: mh10445/new-k8s-tickets:latest
          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: /
              port: 4000
          ports:
            - containerPort: 4000
