k8s/auth-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
