k8s/orders-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
