k8s/redis-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  type: ClusterIP
  selector:
    app: expiration-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
