k8s/tickets-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  type: ClusterIP
  selector:
    app: tickets
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
