k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io.ingres.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$4$3$2$1
spec:
  rules:
    - host: ticketing.com
      http:
        paths:
          - path: /api/users(/|$)(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 4000
            pathType: Prefix
          - path: /api/tickets(/|$)(.*)
            backend:
              service:
                name: tickets-srv
                port:
                  number: 4000
            pathType: Prefix
          - path: /api/orders(/|$)(.*)
            backend:
              service:
                name: orders-srv
                port:
                  number: 4000
            pathType: Prefix
          - path: /?(.*)
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
            pathType: Prefix
